Added config option to disable stripe donations
ref https://linear.app/ghost/issue/ONC-911/support-escalation-turn-off-donations-entirely

- When you connect stripe, the tips and donations feature is automatically enabled
- In some contexts (e.g. political) having this available is not desirable
- This adds a config-only option to disable the feature as the case
  is rare and doesn't warrant a setting in UI
- Instead we hide the UI if this config flag is disabled

--- a/ghost/i18n/locales/ca/portal.json
+++ b/ghost/i18n/locales/ca/portal.json
@@ -169,6 +169,7 @@
     "There was an error processing your payment. Please try again.": "Hi ha hagut un problema processant el teu pagament. Torna-ho a provar.",
     "There was an error sending the email, please try again": "Hi ha hagut un problema en enviar el correu. Torna-ho a provar.",
     "This site is invite-only, contact the owner for access.": "Aquest lloc web és accessible només per invitació, contacta amb el propietari per obtenir-hi accés.",
+    "This site is not accepting donations at the moment.": "",
     "This site is not accepting payments at the moment.": "Aquest lloc web no està acceptant pagaments en aquests moments.",
     "This site only accepts paid members.": "",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "Per completar el registre, fes clic sobre l'enllaç de confirmació al teu correu electrònic. Si no t'arriba en 3 minuts, revisa la teva carpeta de correu brossa!",
