--- a/ghost/i18n/locales/ru/portal.json
+++ b/ghost/i18n/locales/ru/portal.json
@@ -169,6 +169,7 @@
     "There was an error processing your payment. Please try again.": "Произошла ошибка при обработке вашего платежа. Попробуйте ещё раз.",
     "There was an error sending the email, please try again": "Произошла ошибка при отправке письма. Попробуйте ещё раз.",
     "This site is invite-only, contact the owner for access.": "Доступ к материалам этого сайта возможен только по приглашению. Для получения доступа свяжитесь с владельцем сайта.",
+    "This site is not accepting donations at the moment.": "",
     "This site is not accepting payments at the moment.": "В данный момент сайт не принимает платежи.",
     "This site only accepts paid members.": "Этот сайт доступен только для платных участников.",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "Чтобы завершить регистрацию, нажмите на ссылку подтверждения в электронном письме, которое мы прислали. Если письмо не пришло в течение 3 минут, проверьте папку «Спам»!",
