--- a/ghost/i18n/locales/sr-Cyrl/portal.json
+++ b/ghost/i18n/locales/sr-Cyrl/portal.json
@@ -169,6 +169,7 @@
     "There was an error processing your payment. Please try again.": "Дошло је до грешке при обради ваше уплате. Молимо вас покушајте поново.",
     "There was an error sending the email, please try again": "",
     "This site is invite-only, contact the owner for access.": "Овај сајт је само на позив, контактирајте власника ради приступа.",
+    "This site is not accepting donations at the moment.": "",
     "This site is not accepting payments at the moment.": "Овај сајт тренутно не прихвата уплате.",
     "This site only accepts paid members.": "",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "Да бисте завршили пријаву, кликните на линк за потврду у свом сандучету. Ако не стигне у року од 3 минута, проверите фасциклу за нежељену пошту!",
