--- a/ghost/i18n/locales/sv/portal.json
+++ b/ghost/i18n/locales/sv/portal.json
@@ -169,6 +169,7 @@
     "There was an error processing your payment. Please try again.": "Det blev fel när din betalning skulle behandlas, vänligen försök igen",
     "There was an error sending the email, please try again": "Det blev ett fel när e-posten skulle skickas, vänligen försök igen",
     "This site is invite-only, contact the owner for access.": "Den här sidan är endast för inbjudna, kontakta ägaren för åtkomst.",
+    "This site is not accepting donations at the moment.": "",
     "This site is not accepting payments at the moment.": "Den här webbsidan accepterar inte betalningar för tillfället",
     "This site only accepts paid members.": "",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "För att slutföra registreringen, klicka på bekräftelselänken i din inkorg. Om den inte kommer fram inom 3 minuter, kolla din skräppostmapp!",
