--- a/ghost/i18n/locales/zh-Hant/portal.json
+++ b/ghost/i18n/locales/zh-Hant/portal.json
@@ -169,6 +169,7 @@
     "There was an error processing your payment. Please try again.": "處理您的付款時發生錯誤，請您再試一次。",
     "There was an error sending the email, please try again": "寄送 email 時發生錯誤，請您再試一次。",
     "This site is invite-only, contact the owner for access.": "此網站僅限受邀請者觀看，請聯繫網站擁有者取得存取權限。",
+    "This site is not accepting donations at the moment.": "",
     "This site is not accepting payments at the moment.": "此網站目前無付款方式。",
     "This site only accepts paid members.": "",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "要完成註冊，請點擊您收件匣中的確認連結。如果在 3 分鐘內沒有收到，請檢查您的垃圾郵件。",
