--- a/ghost/i18n/locales/zh/portal.json
+++ b/ghost/i18n/locales/zh/portal.json
@@ -169,6 +169,7 @@
     "There was an error processing your payment. Please try again.": "您的付款处理失败，请重试。",
     "There was an error sending the email, please try again": "",
     "This site is invite-only, contact the owner for access.": "此网站仅限邀请，联系网站所有者以获取访问",
+    "This site is not accepting donations at the moment.": "",
     "This site is not accepting payments at the moment.": "本网站目前暂不接受付款。",
     "This site only accepts paid members.": "",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "要完成注册，请点击您收件箱中的确认链接。如果在3分钟内没有收到，请检查一下您的垃圾邮件文件夹！",
