--- a/ghost/i18n/locales/pt-BR/portal.json
+++ b/ghost/i18n/locales/pt-BR/portal.json
@@ -169,6 +169,7 @@
     "There was an error processing your payment. Please try again.": "Houve um erro ao processar seu pagamento. Por favor, tente novamente.",
     "There was an error sending the email, please try again": "Houve um erro ao enviar o e-mail, por favor, tente novamente.",
     "This site is invite-only, contact the owner for access.": "Este site é apenas para convidados. Contate o proprietário para obter acesso.",
+    "This site is not accepting donations at the moment.": "",
     "This site is not accepting payments at the moment.": "Este site não está aceitando pagamentos no momento.",
     "This site only accepts paid members.": "Este site aceita apenas membros pagantes",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "Para completar o cadastro, clique no link de confirmação enviado para sua caixa de entrada. Se o link não chegar dentro de 3 minutos, confira a pasta de spam!",
