--- a/ghost/i18n/locales/sr/portal.json
+++ b/ghost/i18n/locales/sr/portal.json
@@ -169,6 +169,7 @@
     "There was an error processing your payment. Please try again.": "",
     "There was an error sending the email, please try again": "",
     "This site is invite-only, contact the owner for access.": "Ovaj sajt je samo za članove, kontaktirajte vlasnika kako bi dobili pristup.",
+    "This site is not accepting donations at the moment.": "",
     "This site is not accepting payments at the moment.": "",
     "This site only accepts paid members.": "",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "Kliknite na link da biste završili registraciju. Ukoliko ne stigne za 3 minuta proverite spam folder!",
